--- a/www/index.html
+++ b/www/index.html
@@ -15,20 +15,22 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ionic.cloud.min.js"></script>
 
     <!-- cordova/angularjs plugin js -->
-    <script src="js/plugins.min.js"></script>
+    <script src="lib/js/plugins.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- Parse JS SDK -->
-    <script src="js/parse.min.js"></script>
+    <script src="lib/parse.min.js"></script>
 
     <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <!--<script src="lib/js/app.min.js"></script>-->
     <script src="js/services.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/app.js"></script>
   </head>
 
   <body ng-app="fauzie">
