--- a/www/index.html
+++ b/www/index.html
@@ -16,11 +16,14 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-    <!-- cordova/ionic plugin js package (see gulpfile.js) -->
-    <script src="lib/js/plugins.min.js"></script>
+    <!-- Ionic Date Picker -->
+    <script src="lib/ionic-datepicker/dist/ionic-datepicker.bundle.min.js"></script>
 
+    <!-- cordova/ionic plugin js package (see gulpfile.js) -->
+    <script src="lib/compact.min.js"></script>
+
+    <!-- Initialize the Firebase SDK -->
     <script>
-      // Initialize the Firebase SDK
       var fireConfig = {
         apiKey: "AIzaSyCMMEsq4fhNyiCRHieiUZ45WKt9LfDQvVU",
         authDomain: "fauzieapp.firebaseapp.com",
@@ -41,7 +44,7 @@
     <script src="js/app.js"></script>
   </head>
 
-  <body ng-app="fauzie">
+  <body ng-app="fauzie" class="platform-android">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
